# tallykeep

./: .claude_memory_draft_4_8_truncation.md  .env.example  .gitattributes  .gitignore  CONTEXT.md  DEV.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/tallykeep/: __init__.py  configuration.py  main.py  worker.py
backend/tallykeep/adapters/: adapter_registry.py  bitstamp_adapter.py  chain_event_adapter.py  custodial_provider_adapter.py  descriptor_adapter.py  kraken_adapter.py  node_adapter.py
backend/tallykeep/api/: auth_middleware.py  dependencies.py  lock_middleware.py
backend/tallykeep/domain/: __init__.py  custodial_provider.py  descriptor.py  enums.py  holding.py  invoice.py  job.py  ledger_entry.py  observable_security.py  payment_request.py  security_health_item.py  sweep_policy.py  user_profile.py
backend/tallykeep/infrastructure/: cryptography.py  database.py  event_bus.py  event_emission.py  job_queue.py  secrets.py
backend/tallykeep/jobs/: __init__.py  custodial_jobs.py
backend/tallykeep/migrations/: env.py
backend/tallykeep/models/: __init__.py  base.py  custodial_ledger_entry.py  custodial_provider.py  descriptor.py  holding.py  invoice.py  ledger_entry.py  onchain_transaction.py  paired_device.py  payment_request.py  security_health_item.py  sweep.py  user_profile.py
backend/tallykeep/repositories/: custodial_ledger_entry.py  custodial_provider.py  descriptor.py  holding.py  invoice.py  ledger_entry.py  onchain_transaction.py  payment_request.py  runtime_configuration.py  security_health.py  sweep_execution.py  sweep_policy.py  user_profile.py  utxo.py
backend/tallykeep/schemas/: configuration.py  errors.py  holding.py  trading.py  treasury.py  user_profile.py
backend/tests/: conftest.py
(+438 files in other folders)
